--- a/home.html
+++ b/home.html
@@ -313,7 +313,7 @@
             <div class="container">
                 <!--<h2 class="title"></h2>-->
                 <div class="col-sm-6 ml-auto mr-auto text-center">
-                    <h5 class="description text-black">
+                    <h5 class="description text-black text_bold" style="font-weight: bold">
                         Scent marketing is the ultimate way to increase brand differentiation
                         and improve your commercial environment
                     </h5>
