--- a/home.html
+++ b/home.html
@@ -147,7 +147,7 @@
                                 <img src="assets/icons/1.png" alt="Thumbnail Image" class="img-fluid">
                                 <h4 class="title">25% of ambient</h4>
                                 <p class="category text-primary"></p>
-                                <p class="description">
+                                <p class="description text_bold">
                                     scents increase positive product ratings
                                 </p>
                             </div>
@@ -157,7 +157,7 @@
                                 <img src="assets/icons/2.png" alt="Thumbnail Image" class="img-fluid">
                                 <h4 class="title">40% of customers</h4>
                                 <p class="category text-primary"></p>
-                                <p class="description">
+                                <p class="description text_bold">
                                     will linger in scented areas
                                 </p>
                             </div>
@@ -165,9 +165,9 @@
                         <div class="col-md-3">
                             <div class="team-player">
                                 <img src="assets/icons/3.png" alt="Thumbnail Image" class="img-fluid">
-                                <h4 class="title">80% increae</h4>
+                                <h4 class="title">80% increase</h4>
                                 <p class="category text-primary"></p>
-                                <p class="description">
+                                <p class="description text_bold">
                                     in intent to purchase
                                 </p>
                             </div>
@@ -177,7 +177,7 @@
                                 <img src="assets/icons/4.png" alt="Thumbnail Image" class="rounded-circle img-fluid">
                                 <h4 class="title">75% of emotions</h4>
                                 <p class="category text-primary"></p>
-                                <p class="description">
+                                <p class="description text_bold">
                                     we experience are affected by smell
                                 </p>
                             </div>
