--- a/home.html
+++ b/home.html
@@ -481,7 +481,7 @@
         <div class="section section-contact-us" id="contact-us">
             <div class="container">
                 <h2 class="title text-center">Contact Us</h2>
-                <p class="description text-center">Give us a call, send us a message or pop in to see us</p>
+                <p class="description text-center text-white">Give us a call, send us a message or pop in to see us</p>
                 <div class="row">
                     <div class="col-lg-3">
                         <h4>Head Office</h4>
