--- a/home.html
+++ b/home.html
@@ -81,7 +81,7 @@
                     <span>Image 01</span><div><h3><font class="small">Enrich The Ambience of</font> <br/>YOUR HOME</h3></div>
                 </li>
                 <li class="" data-parallax="true">
-                    <span>Image 02</span><div><h3>Power of <br/>SCENT</h3></div>
+                    <span>Image 02</span><div><h3>Power of <br/>FRAGRANCE</h3></div>
                 </li>
                 <li class="" data-parallax="true">
                     <span>Image 03</span><div><h3><font class="small">Illuminate your</font> <br/> SENSES</h3></div>
@@ -98,7 +98,7 @@
             </ul>
             <div class="container">
                 <div class="content-center">
-                    <!--<h1 class="title">The Power of SCENT.</h1>-->
+                    <!--<h1 class="title">The Power of FRAGRANCE.</h1>-->
                     <div class="text-center">
                         <a href="#contact-us" class="btn btn-lg btn-light btn-round animate scroll-fancy">
                             <i class="fa fa-envelope"></i> Request a Demo
@@ -132,7 +132,7 @@
         </div>
         <div class="section section-team text-center" id="team">
             <div class="container">
-                <h2 class="title">The Power of Scent</h2>
+                <h2 class="title">The Power of FRAGRANCE</h2>
                 <div class="col-sm-6 ml-auto mr-auto text-center">
                     <h5 class="description">
                         We are 100 times more likely to remember something we smell,
@@ -145,41 +145,33 @@
                         <div class="col-md-3">
                             <div class="team-player">
                                 <img src="assets/icons/1.png" alt="Thumbnail Image" class="img-fluid">
-                                <h4 class="title">25% of ambient</h4>
-                                <p class="category text-primary"></p>
-                                <p class="description text_bold">
+                                <h4 class="title">25% of ambient
                                     scents increase positive product ratings
-                                </p>
+                                </h4>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="team-player">
                                 <img src="assets/icons/2.png" alt="Thumbnail Image" class="img-fluid">
-                                <h4 class="title">40% of customers</h4>
-                                <p class="category text-primary"></p>
-                                <p class="description text_bold">
+                                <h4 class="title">1.40% of customers
                                     will linger in scented areas
-                                </p>
+                                </h4>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="team-player">
                                 <img src="assets/icons/3.png" alt="Thumbnail Image" class="img-fluid">
-                                <h4 class="title">80% increase</h4>
-                                <p class="category text-primary"></p>
-                                <p class="description text_bold">
+                                <h4 class="title">80% increase
                                     in intent to purchase
-                                </p>
+                                </h4>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="team-player">
                                 <img src="assets/icons/4.png" alt="Thumbnail Image" class="rounded-circle img-fluid">
-                                <h4 class="title">75% of emotions</h4>
-                                <p class="category text-primary"></p>
-                                <p class="description text_bold">
+                                <h4 class="title">75% of emotions
                                     we experience are affected by smell
-                                </p>
+                                </h4>
                             </div>
                         </div>
                     </div>
