--- a/home.html
+++ b/home.html
@@ -475,8 +475,8 @@
                 <h2 class="title text-center">Contact Us</h2>
                 <p class="description text-center text-white">Give us a call, send us a message or pop in to see us</p>
                 <div class="row">
-                    <div class="col-lg-3">
-                        <h4>Head Office</h4>
+                    <div class="col-lg-3 col-md-3 col-sm-12">
+                        <h4 class="address-title">Head Office</h4>
                         <div class="row">
                             <div class="col-sm-12 address-block">
                                 <div class="icons-container">
@@ -514,8 +514,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3">
-                        <h4>Africa Office</h4>
+                    <div class="col-lg-3 col-md-3 col-sm-12">
+                        <h4 class="address-title">Africa Office</h4>
                         <div class="row">
                             <div class="col-sm-12 address-block">
                                 <div class="icons-container">
@@ -553,7 +553,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 text-center">
+                    <div class="col-lg-6 col-md-6 col-sm-12 text-center contact-form">
                         <div class="input-group input-lg">
                             <input type="text" class="form-control" placeholder="First Name...">
                         </div>
@@ -573,7 +573,7 @@
         <footer class="footer footer-default">
             <div class="container">
                 <div class="col-md-4 ml-auto mr-auto">
-                    <img src="assets/logo/black.png" class="img-fluid">
+                    <img src="assets/logo/black.png" class="img-fluid footer-img">
                 </div>
                 <div class="row">
                     <div class="col-sm-4">
