new slider update

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
     <link href="assets/css/now-ui-kit.css?v=1.1.0" rel="stylesheet" />
     <!-- CSS Just for demo purpose, don't include it in your project -->
     <link href="assets/css/demo.css" rel="stylesheet" />
-    <link href="assets/css/style2.css" rel="stylesheet" />
+    <link href="assets/css/style1.css" rel="stylesheet" />
 </head>
 
 <body class="landing-page sidebar-collapse" id="page">
@@ -77,7 +77,7 @@
     <div class="wrapper">
         <div class="page-header page-header-small" id="home">
             <ul class="cb-slideshow">
-                <li class="page-header-image" data-parallax="true">
+                <li class="" data-parallax="true">
                     <span>Image 01</span><div><h3><font class="small">Enrich The Ambience of</font> <br/>YOUR HOME</h3></div>
                 </li>
                 <li class="" data-parallax="true">
