--- a/home.html
+++ b/home.html
@@ -153,8 +153,8 @@
                         <div class="col-md-3">
                             <div class="team-player">
                                 <img src="assets/icons/2.png" alt="Thumbnail Image" class="img-fluid">
-                                <h4 class="title">1.40% of customers
-                                    will linger in scented areas
+                                <h4 class="title">40% of customers
+                                    will linger longer in scented areas
                                 </h4>
                             </div>
                         </div>
