new updates, video and font

--- a/home.html
+++ b/home.html
@@ -272,26 +272,6 @@
                                         fragrances and cutting edge scent diffusion systems - all at an affordable price.
                                     </p>
                                 </div>
-                                <div>
-                                    <p>
-                                        By working with us you can:
-                                    <ul>
-                                        <li>
-                                            Choose and manage the ambience of your event – whether it’s fun, zesty, lively; sophisticated,
-                                            sensuous, relaxed; an extension of your corporate brand; or totally unconventional, zany,
-                                            and eccentric
-                                        </li>
-                                        <li>
-                                            Positively impact on your guests feelings and emotions – scientific research has shown
-                                            that over 70% of our emotions are based on what we smell
-                                        </li>
-                                        <li>
-                                            Create unforgettable memories - we are 100 times more likely to remember something we smell
-                                            than something we see, hear or touch.
-                                        </li>
-                                    </ul>
-                                    </p>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -393,18 +373,21 @@
             </div>
         </div>
         <div class="section section-testimonials text-center" id="testimonials">
+            <video poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg" id="bgvid" playsinline autoplay muted loop>
+                <source src="assets/about-us-image/video.mp4" type="video/mp4">
+            </video>
             <div class="container">
                 <div class="">
                     <h2 class="title text-white">Client Testimonials</h2>
                 </div>
                 <div class="client-testimonials">
                     <div class="col-sm-8 ml-auto mr-auto">
-                    <p class="description text-white">
+                    <h5 class="description text-white">
                         The Arctic Ocean freezes every winter and much of the sea-ice then thaws every summer,
                         and that process will continue whatever happens with climate change. Even if the
                         Arctic continues to be one of the fastest-warming regions of the world, it will
                         always be plunged into bitterly cold polar dark
-                    </p>
+                    </h5>
                         <h4 class="text-light">
                             Tunrayo Timi <br/>
                             <span class="small">
@@ -414,12 +397,12 @@
                         </h4>
                     </div>
                     <div class="col-sm-8 ml-auto mr-auto">
-                        <p class="description text-light">
+                        <h5 class="description text-light">
                             The Arctic Ocean freezes every winter and much of the sea-ice then thaws every summer,
                             and that process will continue whatever happens with climate change. Even if the
                             Arctic continues to be one of the fastest-warming regions of the world, it will
                             always be plunged into bitterly cold polar dark
-                        </p>
+                        </h5>
                         <h4 class="text-light">
                             Tunrayo Timi <br/>
                             <span class="small">
@@ -429,12 +412,12 @@
                         </h4>
                     </div>
                     <div class="col-sm-8 ml-auto mr-auto">
-                        <p class="description text-light">
+                        <h5 class="description text-light">
                             The Arctic Ocean freezes every winter and much of the sea-ice then thaws every summer,
                             and that process will continue whatever happens with climate change. Even if the
                             Arctic continues to be one of the fastest-warming regions of the world, it will
                             always be plunged into bitterly cold polar dark
-                        </p>
+                        </h5>
                         <h4 class="text-light">
                             Tunrayo Timi <br/>
                             <span class="small">
@@ -471,84 +454,46 @@
             </div>
         </div>
         <div class="section section-contact-us" id="contact-us">
+
             <div class="container">
                 <h2 class="title text-center">Contact Us</h2>
                 <p class="description text-center text-white">Give us a call, send us a message or pop in to see us</p>
                 <div class="row">
-                    <div class="col-lg-3 col-md-3 col-sm-12">
-                        <h4 class="address-title">Head Office</h4>
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <h4 class="address-title text-center">Head Office</h4>
                         <div class="row">
                             <div class="col-sm-12 address-block">
-                                <div class="icons-container">
+                                <div class="address ">
                                     <i class="now-ui-icons location_pin fa-3x"></i>
-                                </div>
-                                <div class="address">
-                                    Hillview <br/>
-                                    22 The Drive <br/>
-                                    Coulsdon, Surrey <br/>
-                                    CR5 2BL
+                                    <div class="">
+                                        Hillview <br/>
+                                        22 The Drive <br/>
+                                        Coulsdon, Surrey <br/>
+                                        CR5 2BL
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-sm-12 address-block">
-                                <div class="icons-container">
+                                <div class="address">
                                     <i class="now-ui-icons ui-1_email-85 fa-3x"></i>
-                                </div>
-                                <div class="address">
-                                    <br/>
-                                    carol@cececa.com <br/>paul@cececa.com
+                                    <div class="">
+                                        <br/>
+                                        carol@cececa.com <br/>paul@cececa.com
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-sm-12 address-block">
-                                <div class="icons-container">
+                                <div class="address">
                                     <i class="now-ui-icons tech_mobile fa-3x"></i>
-                                </div>
-                                <div class="address">
-                                    <br/>
-                                    +44(0) 20 3417 9936 <br/>
-                                    +44(0) 77 7207 9050
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-sm-12">
-                        <h4 class="address-title">Africa Office</h4>
-                        <div class="row">
-                            <div class="col-sm-12 address-block">
-                                <div class="icons-container">
-                                    <i class="now-ui-icons location_pin fa-3x"></i>
-                                </div>
-                                <div class="address">
-                                    16c Bamidele Street <br/>
-                                    off Allen Avenue <br/>
-                                    Lagos <br/>
-                                    Nigeria
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12 address-block">
-                                <div class="icons-container">
-                                    <i class="now-ui-icons ui-1_email-85 fa-3x"></i>
-                                </div>
-                                <div class="address">
-                                    <br/>
-                                    info@cececa.com
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12 address-block">
-                                <div class="icons-container">
-                                    <i class="now-ui-icons tech_mobile fa-3x"></i>
-                                </div>
-                                <div class="address">
-                                    <br/>
-                                    +234(0) 803 3021 986 <br/>
-                                    +234(0) 816 5926 886
+                                    <div class="address">
+                                        <br/>
+                                        +44(0) 20 3417 9936 <br/>
+                                        +44(0) 77 7207 9050
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -665,17 +610,6 @@
                 scrollTop: $(href).offset().top
             }, 2000);
         });
-
-//        $("#slideshow > div:gt(0)").hide();
-//
-//        setInterval(function() {
-//            $('#slideshow > div:first')
-//                .fadeOut(2000)
-//                .next()
-//                .fadeIn(1000)
-//                .end()
-//                .appendTo('#slideshow');
-//        },  5000);
 
 
     });
