new updates, video and font

--- a/home.html
+++ b/home.html
@@ -210,13 +210,13 @@
 
             </div>
         </div>
-        <div class="section section-our-solutions text-center" id="our-solutions">
+        <div class="section section-our-solutions" id="our-solutions">
             <div class="container">
-                <h2 class="title">Our Solutions</h2>
+                <h2 class="title text-center">Our Solutions</h2>
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="p-5" style="margin-top:5px">
-                            <h4 class="text-uppercase text_align-left">Scent Diffusion Systems</h4>
+                            <h4 class="text-uppercase text-center">Scent Diffusion Systems</h4>
                             <p>
                                 Our diverse range of fragrances and diffusion systems, provide the ultimate choice,
                                 flexibility and quality that will stimulate a positive sensory impact on your business.
@@ -238,7 +238,7 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="p-5" style="margin-top:10px">
-                            <h4 class="text-uppercase text_align-left">Odour Management</h4>
+                            <h4 class="text-uppercase text-center">Odour Management</h4>
                             <p>
                                 As an fully fledged aircare business we also deal with neutralising malodours from kitchen
                                 areas to bathrooms. We have you covered. Get in contact to find out more about our
@@ -249,12 +249,12 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-6">
-                        <div class="" style="margin-top:10px">
-                            <h4 class="text-uppercase text_align-left">Events</h4>
+                        <div class="p-5" style="margin-top:10px">
+                            <h4 class="text-uppercase text-center">Events</h4>
                             <div class="events-carousel">
                                 <div>
+                                    <h4 class="text-center">Creating unforgettable memories</h4>
                                     <p>
-                                    <h4 class="">Creating unforgettable memories</h4>
                                     The venue was great, the food delightful, the atmosphere electric,
                                     the guests had a good time – and yet something was missing – an aroma to savour,
                                     a fragrance to excite your senses, a scent to make your event literally
@@ -266,12 +266,29 @@
                                         <span class="text-danger">Cececa excels at creating phenomenal events through extraordinary
                                             scent experiences.
                                         </span>
-                                        <br/><br/>
+                                        <br/>
                                         Whether it’s a wedding, birthday party, corporate event or special occasion, we will dramatically
                                         transform your event through the power of fragrance using environmentally friendly, couture
                                         fragrances and cutting edge scent diffusion systems - all at an affordable price.
                                     </p>
                                 </div>
+                                <div>
+                                    <h4 class="text-center">Contact Us</h4>
+                                    <p>
+                                        As part of our free consultation, we will size up your venue and identify
+                                        the right scent diffusion system for maximum impact
+                                    </p>
+                                    <h4 class="text-center">Choose your Fragrance</h4>
+                                    <p>
+                                        From traditional to unconventional, from floral, fresh or fruity to sweets, food or drink.
+                                    </p>
+                                    <h4 class="text-center">Relax and Enjoy</h4>
+                                    <p>
+                                        As you create unforgettable memories for your party guests or make an extraordinary
+                                        positive and lasting impact on your corporate clients.
+                                    </p>
+                                </div>
+                                <div></div>
                             </div>
                         </div>
                     </div>
@@ -374,7 +391,7 @@
         </div>
         <div class="section section-testimonials text-center" id="testimonials">
             <video poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg" id="bgvid" playsinline autoplay muted loop>
-                <source src="assets/about-us-image/video.mp4" type="video/mp4">
+                <source src="assets/about-us-image/Video.mp4" type="video/mp4">
             </video>
             <div class="container">
                 <div class="">
