new updates, added testimonials

--- a/home.html
+++ b/home.html
@@ -400,45 +400,58 @@
                 <div class="client-testimonials">
                     <div class="col-sm-8 ml-auto mr-auto">
                     <h5 class="description text-white">
-                        The Arctic Ocean freezes every winter and much of the sea-ice then thaws every summer,
-                        and that process will continue whatever happens with climate change. Even if the
-                        Arctic continues to be one of the fastest-warming regions of the world, it will
-                        always be plunged into bitterly cold polar dark
+                        I must say we have had a beautiful experience using the Cececa scent, the Orchid fragrance at the
+                        lobby is very refreshing and welcoming.
+                        Cececa scent has met our needs of creating a beautifully fragranced atmosphere for our
+                        esteemed guests.
                     </h5>
                         <h4 class="text-light">
-                            Tunrayo Timi <br/>
+                            Dorcas George <br/>
                             <span class="small">
-                                Oando PLC
+                                The George Hotel
                             </span>
                             <div class="separator"></div>
                         </h4>
                     </div>
                     <div class="col-sm-8 ml-auto mr-auto">
                         <h5 class="description text-light">
-                            The Arctic Ocean freezes every winter and much of the sea-ice then thaws every summer,
-                            and that process will continue whatever happens with climate change. Even if the
-                            Arctic continues to be one of the fastest-warming regions of the world, it will
-                            always be plunged into bitterly cold polar dark
+                            Cececa is a great addition to any store, office or home space as it not only helps to keep
+                            things smelling fresh, spicy or woody, whichever one might go for but it's also an
+                            environmentally friendly and aesthetically appealing solution to odour management.
+                            We use ours every day- It's magical!
                         </h5>
                         <h4 class="text-light">
-                            Tunrayo Timi <br/>
+                            Teni Sagoe <br/>
                             <span class="small">
-                                Oando PLC
+                                Deola
                             </span>
                             <div class="separator"></div>
                         </h4>
                     </div>
                     <div class="col-sm-8 ml-auto mr-auto">
                         <h5 class="description text-light">
-                            The Arctic Ocean freezes every winter and much of the sea-ice then thaws every summer,
-                            and that process will continue whatever happens with climate change. Even if the
-                            Arctic continues to be one of the fastest-warming regions of the world, it will
-                            always be plunged into bitterly cold polar dark
+                            We love it and our customers love it even more.
+                            With hopes to freshen the smell of the restaurant it’s ticked all of our boxes.
+                            We’ve received many compliments especially from our return customers.
                         </h5>
                         <h4 class="text-light">
-                            Tunrayo Timi <br/>
+                            Yanate Banigo <br/>
                             <span class="small">
-                                Oando PLC
+                                Sugarcane Restaurant
+                            </span>
+                            <div class="separator"></div>
+                        </h4>
+                    </div>
+                    <div class="col-sm-8 ml-auto mr-auto">
+                        <h5 class="description text-light">
+                            The scent and experience of space at The Wheatbaker are inextricably linked .
+                            Cececa continues to provide a seamless , customized world class product delivered
+                            impeccably by an excellent customer focused team.
+                        </h5>
+                        <h4 class="text-light">
+                            Mosun Ogunbanjo <br/>
+                            <span class="small">
+                                The Wheatbaker Hotel
                             </span>
                             <div class="separator"></div>
                         </h4>
