added buttons for caontact

--- a/home.html
+++ b/home.html
@@ -49,6 +49,9 @@
                         <a class="nav-link" href="#scent-marketing">Scent Marketing</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#our-solutions">Our Solutions</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#contact-us">Contact Us</a>
                     </li>
                     <li class="nav-item">
@@ -124,6 +127,7 @@
                             fragrances from around the world. Our goal is to transform your world through the power of
                             fragrance, and our process is easy, accessible and affordable.
                         </h5>
+                        <a class="btn btn-white btn-round" href="#contact-us">Find Out More</a>
                         <div class="separator separator-primary"></div>
                     </div>
                 </div>
@@ -205,7 +209,16 @@
                             experiences that will ultimately increase your business performance and bottom line.
                         </h5>
                     </div>
+
                     <div class="separator separator-primary"></div>
+                </div>
+
+                <div class="content-center">
+                    <div class="text-center">
+                        <a href="#contact-us" class="btn btn-lg btn-white btn-round animate scroll-fancy">
+                            Get Scented
+                        </a>
+                    </div>
                 </div>
 
             </div>
@@ -227,6 +240,13 @@
                                 exquisite fragrances that will set your business apart
                             </p>
                         </div>
+                        <div class="content-center">
+                            <div class="text-center">
+                                <a href="#contact-us" style="font-size: 1.07em" class="btn btn-round animate scroll-fancy">
+                                    Get Scented
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-sm-6">
                         <img class="img-fluid" src="assets/img/6.jpg" />
@@ -244,6 +264,13 @@
                                 areas to bathrooms. We have you covered. Get in contact to find out more about our
                                 cost-effective odour management systems.
                             </p>
+                        </div>
+                        <div class="content-center">
+                            <div class="text-center">
+                                <a href="#contact-us" style="font-size: 1.07em" class="btn btn-round animate scroll-fancy">
+                                    <i class="fa fa-envelope"></i> Contact Us
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -487,7 +514,7 @@
 
             <div class="container">
                 <h2 class="title text-center">Contact Us</h2>
-                <p class="description text-center text-white">Give us a call, send us a message or pop in to see us</p>
+                <p class="text-center text-white">Give us a call, send us a message or pop in to see us</p>
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <h4 class="address-title text-center">Head Office</h4>
@@ -539,7 +566,10 @@
                             <textarea class="form-control" name="name" rows="4" cols="80" placeholder="Type a message..."></textarea>
                         </div>
                         <div class="send-button">
-                            <a href="#pablo" class="btn btn-dark btn-round btn-block btn-lg">Send Message</a>
+                            <a href="#pablo" class="btn btn-white btn-round btn-block btn-lg">
+                                <i class="fa fa-envelope"></i>
+                                Send Message
+                            </a>
                         </div>
                     </div>
                 </div>
