--- a/home.html
+++ b/home.html
@@ -290,9 +290,7 @@
                                 </div>
                                 <div>
                                     <p>
-                                        <span class="text-danger">Cececa excels at creating phenomenal events through extraordinary
-                                            scent experiences.
-                                        </span>
+                                        Cececa excels at creating phenomenal events through extraordinary scent experiences.
                                         <br/>
                                         Whether it’s a wedding, birthday party, corporate event or special occasion, we will dramatically
                                         transform your event through the power of fragrance using environmentally friendly, couture
