corrected banner captions

--- a/home.html
+++ b/home.html
@@ -81,22 +81,22 @@
         <div class="page-header page-header-small" id="home">
             <ul class="cb-slideshow">
                 <li class="" data-parallax="true">
-                    <span>Image 01</span><div><h3><font class="small">Enrich The Ambience of</font> <br/>YOUR HOME</h3></div>
+                    <span>Image 01</span><div><h3><font class="small">Extend your</font> <br/>BRAND</h3></div>
                 </li>
                 <li class="" data-parallax="true">
-                    <span>Image 02</span><div><h3>Power of <br/>FRAGRANCE</h3></div>
+                    <span>Image 02</span><div><h3>Transform Your</font> <br/> WORLD</h3></div>
                 </li>
                 <li class="" data-parallax="true">
-                    <span>Image 03</span><div><h3><font class="small">Illuminate your</font> <br/> SENSES</h3></div>
+                    <span>Image 03</span><div><h3><font class="small">Create Unforgettable</font> <br/> MEMORIES</h3></div>
                 </li>
                 <li class="" data-parallax="true">
-                    <span>Image 04</span><div><h3><font class="small">Create Unforgettable</font><br/> MEMORIES</h3></div>
+                    <span>Image 04</span><div><h3><font class="small">Illuminate your<br/> SENSES</font></h3></div>
                 </li>
                 <li class="" data-parallax="true">
-                    <span>Image 05</span><div><h3><font class="small">Transform Your</font> <br/> WORLD</h3></div>
+                    <span>Image 05</span><div><h3><font class="small">Power of <br/>FRAGRANCE</font></h3></div>
                 </li>
                 <li class="" data-parallax="true">
-                    <span>Image 06</span><div><h3><font class="small">Extend Your</font> <br/> BRAND</h3></div>
+                    <span>Image 06</span><div><h3><font class="small">Enrich the Ambience of</font> <br/> YOUR HOME</h3></div>
                 </li>
             </ul>
             <div class="container">
